--- a/LemdaExpression/.project
+++ b/LemdaExpression/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LemdaExpression</name>
+	<name>Java8Features</name>
 	<comment></comment>
 	<projects>
 	</projects>
